[package]
name = "jcblocktui"
version = "0.1.0"
edition = "2024"
authors = ["Justin Cromer"]
description = "A TUI Block Game"
readme = "README.md"
repository = "https://github.com/avg-cs-student/jcblocktui"
license = "MIT"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
jcblocks =  "0.1.0"
